Changelog
=========

1.0.4-SVN-Unreleased (2009-06-29)
------------------
 - Modificati stili tabella [irene]

1.0.3 (2009-06-26)
------------------
 - Creato file css ad hoc per problemi con IE (#103) [irene]

1.0.2 (2009-06-23)
------------------
 - Risolto baco nella vista (#13) [andrea]

1.0.1 (2009-04-02)
------------------
 - Modifiche alla vista


1.0.0 (2009-03-31)
------------------
 - Creazione del prodotto per la vista di un cercatore
